LPS-172422 New translations Language.json (Portuguese, Brazilian)

--- a/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/common/I18n/Language_pt_BR.json
+++ b/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/common/I18n/Language_pt_BR.json
@@ -23,11 +23,11 @@
 	"administrator-roles": "Cargos de administrador",
 	"aggregate-key-single-file": "Agregar arquivo único de chave",
 	"all": "Todos",
-	"all-projects": "All projects",
+	"all-projects": "Todos os projetos",
 	"allowed-email-domains": "Domínios de e-mail permitidos",
 	"almost-there-setup-analytics-cloud-by-finishing-the-activation-form": "Quase lá! Configure o Analytics Cloud concluído o formulário de ativação",
 	"almost-there-setup-experience-cloud-by-finishing-the-activation-form": "Quase lá! Configure o Experience Cloud concluído o formulário de ativação.",
-	"almost-there-setup-lxc-sm": "Almost there! Setup LXC - SM",
+	"almost-there-setup-lxc-sm": "Quase lá! Configurar LXC - SM",
 	"an-unexpected-error-occurred": "Ocorreu um erro inesperado.",
 	"analytics-cloud": "Analytics Cloud",
 	"analytics-cloud-activation": "Ativação do Analytics Cloud",
@@ -44,7 +44,7 @@
 	"backup": "Backup",
 	"belgium": "Bélgica",
 	"brazil": "Brasil",
-	"by-finishing-the-activation-form": "by finishing the activation form.",
+	"by-finishing-the-activation-form": "concluindo o form unário de ativação.",
 	"cancel": "Cancelar",
 	"chicago": "Chicago",
 	"china": "China",
@@ -68,7 +68,7 @@
 	"csp": "CSP",
 	"csp-up-to-10-k-users": "CSP - Até 10 mil usuários",
 	"current": "Atual",
-	"danger": "Danger",
+	"danger": "Perigo",
 	"data-center-location": "Local da Central de Dados",
 	"deactivate": "Desativar",
 	"deactivate-dxp-activation-keys": "Desactivar chaves de activação DXP",
@@ -102,9 +102,9 @@
 	"environment-details": "Detalhes do ambiente",
 	"environment-name": "Nome do ambiente",
 	"environment-type": "Tipo de ambiente",
-	"environments-are-being-set-up-and-will-be-available-soon": "environments are ready. Go to the Product Console to view DXP Cloud details.",
-	"environments-are-ready-go-to-the-product-console-to-view-lxc-sm-details": "environments are ready. Go to the Product Console to view DXP Cloud details.",
-	"error": "Error",
+	"environments-are-being-set-up-and-will-be-available-soon": "ambientes estão prontos. Acesse o Console do produto para visualizar os detalhes do DXP Cloud.",
+	"environments-are-ready-go-to-the-product-console-to-view-lxc-sm-details": "ambientes estão prontos. Acesse o Console do produto para visualizar os detalhes do DXP Cloud.",
+	"error": "Erro",
 	"exp-date": "Data de vencimento",
 	"expiration-date": "Data de validade",
 	"expired": "Expirado",
@@ -158,11 +158,11 @@
 	"ireland": "Irlanda",
 	"italy": "Itália",
 	"japan": "Japão",
-	"jurong-west-singapore": "Jurong West, Singapore",
+	"jurong-west-singapore": "Jurong West, Singapura",
 	"key-activation-available-x-of-x": "Ativação por chave disponível: {0} de {1}",
 	"key-activations-available": "Ativação por chave disponível",
 	"key-type": "Tipo de chave",
-	"learn-more-about-customer-portal-roles": "Saiba mais sobre os cargos do Portal de clientes",
+	"learn-more-about-customer-portal-roles": "Saiba mais sobre os cargos do Portal de clientes.",
 	"let-s-set-up-your-project": "Vamos configurar seu projeto",
 	"license-type": "Tipo de licença",
 	"liferay-contact": "Contrato Liferay",
@@ -183,7 +183,7 @@
 	"luxembourg": "Luxemburgo",
 	"lxc-project-id": "ID de projeto LXC",
 	"lxc-sm": "LXC - SM",
-	"lxc-sm-is-the-abbreviation-of-liferay-experience-cloud-self-managed": "LXC - SM is the abbreviation of Liferay Experience Cloud - Self-Managed",
+	"lxc-sm-is-the-abbreviation-of-liferay-experience-cloud-self-managed": "LXC - SM é a abreviatura de Liferay Experience Cloud - Self-Managed",
 	"lxc-sm-setup": "Configuração de LXC - SM",
 	"mac-address": "Endereço MAC",
 	"mac-addresses": "Endereços MAC",
@@ -201,9 +201,9 @@
 	"name-this-environment-this-cannot-be-edited-later": "Dê um nome a este ambiente. Este campo não pode ser editado posteriormente.",
 	"netherlands": "Países Baixos",
 	"next": "Avançar",
-	"no-activation-keys-found-with-this-search-criteria": "Nenhuma chave de ativação encontrada com este critério de pesquisa",
-	"no-projects-match-that-name": "No projects match that name",
-	"no-projects-match-these-criteria": "Nenhum projeto corresponde a este critério",
+	"no-activation-keys-found-with-this-search-criteria": "Nenhuma chave de ativação encontrada com este critério de pesquisa.",
+	"no-projects-match-that-name": "Nenhum projeto combina com este nome",
+	"no-projects-match-these-criteria": "Nenhum projeto corresponde a este critério.",
 	"no-subscriptions-match-these-criteria": "Nenhuma assinatura corresponde a este critério.",
 	"non-prod": "Não prod",
 	"non-production": "Não produção",
@@ -312,7 +312,7 @@
 	"subscription-term": "Termo de assinatura",
 	"subscription-terms": "Termos de assinatura",
 	"subscriptions": "Assinaturas",
-	"success": "Success",
+	"success": "Sucesso",
 	"support-level": "Nível de suporte",
 	"support-region": "Região de suporte",
 	"support-seat": "Assento de Suporte",
@@ -365,7 +365,7 @@
 	"we-ll-need-a-few-details-to-finish-building-your-dxp-environments": "Precisaremos de alguns detalhes para concluir a construção de seus ambientes DXP.",
 	"we-ll-need-a-few-details-to-finish-building-your-liferay-experience-cloud-workspaces": "Precisaremos de alguns detalhes para concluir a criação dos locais de trabalho do Liferay Experience Cloud.",
 	"we-ll-need-a-few-details-to-finish-building-your-lxc-sm-environment": "Precisaremos de alguns detalhes para concluir a construção do seu ambiente LXC-SM.",
-	"we-ll-need-a-few-details-to-finish-creating-your-analytics-cloud-workspace": "Precisaremos de alguns detalhes para concluir a criação do ambiente de trabalho do Analytics Cloud",
+	"we-ll-need-a-few-details-to-finish-creating-your-analytics-cloud-workspace": "Precisaremos de alguns detalhes para concluir a criação do ambiente de trabalho do Analytics Cloud.",
 	"we-ll-need-a-few-details-to-finish-creating-your-liferay-experience-cloud-workspace": "Precisaremos de alguns detalhes para concluir a criação dos locais de trabalho do Liferay Experience Cloud.",
 	"we-ll-start-by-adding-any-team-members-to-your-project-and-complete-your-product-activation": "Começaremos adicionando quaisquer membros da equipe ao seu projeto e completaremos a ativação de seu produto.",
 	"workspace": "Ambiente de trabalho.",
@@ -382,14 +382,14 @@
 	"x-results-for-x": "{0} resultados para {1}",
 	"your-analytics-cloud-environments-are-ready": "Seus ambientes Analytics Cloud estão prontos.",
 	"your-analytics-cloud-environments-are-ready-visit-the-workspace-to-view-analytics-cloud-details": "Seus ambientes Analytics Cloud estão prontos. Visite o ambiente de trabalho para visualizar os detalhes do Analytics Cloud.",
-	"your-analytics-cloud-workspace-is-being-set-up-and-will-be-available-soon": "Seu ambiente de trabalho Analytics Cloud está sendo configurado e estará disponível em breve",
+	"your-analytics-cloud-workspace-is-being-set-up-and-will-be-available-soon": "Seu ambiente de trabalho Analytics Cloud está sendo configurado e estará disponível em breve.",
 	"your-analytics-cloud-workspace-will-be-provisioned-in-1-2-business-days-an-email-will-be-sent-once-your-workspace-is-ready": "Seu ambiente de trabalho Analytics Cloud será provisionado em 1-2 dias úteis. Um e-mail será enviado assim que seu ambiente de trabalho estiver pronto.",
 	"your-experience-cloud-environments-are-ready": "Seus ambientes Experience Cloud estão prontos.",
 	"your-experience-cloud-project-is-being-set-up-and-will-be-available-soon": "Seu projeto Experience Cloud está sendo configurado e estará disponível em breve.",
 	"your-liferay-experience-cloud-environments-are-ready": "Seus ambientes Liferay Experience Cloud estão prontos",
 	"your-liferay-experience-cloud-workspace-will-be-provisioned-in-1-2-business-days-an-email-will-be-sent-once-your-workspace-is-ready": "Seu local de trabalho Liferay Experience Cloud será provisionado em 1-2 dias úteis. Um e-mail será enviado assim que seu ambiente de trabalho estiver pronto",
-	"your-lxc-sm": "Your LXC - SM",
-	"your-lxc-sm-environments-are-being-set-up-and-will-be-available-soon": "Seus ambientes LXC - SM estão sendo configurados e estarão disponíveis em breve",
+	"your-lxc-sm": "Seu LXC - SM",
+	"your-lxc-sm-environments-are-being-set-up-and-will-be-available-soon": "Seus ambientes LXC - SM estão sendo configurados e estarão disponíveis em breve.",
 	"your-lxc-sm-environments-are-ready": "Seus ambientes LXC - SM estão prontos.",
 	"your-lxc-sm-environments-are-ready-go-to-the-product-console-to-view-lxc-sm-details": "Seus ambientes LXC - SM estão prontos. Acesse o Console do produto para visualizar os detalhes do DXP Cloud.",
 	"your-request-completed-successfully": "Sua solicitação foi concluída com sucesso."
